test/files/neg/t6476-bad-esc-d.scala

class Test {
  def f = s"\"abcdef\""
}
